@@ -1112,7 +1112,7 @@ class CyberSourceTest < Test::Unit::TestCase
     response = stub_comms do
       @gateway.authorize(@amount, @credit_card, @options)
     end.check_request do |_endpoint, data, _headers|
-      assert_not_match(/\<subsequentAuthFirst\>/, data)
+      assert_match(/\<subsequentAuthFirst\>/, data)
       assert_match(/\<subsequentAuthStoredCredential\>/, data)
       assert_not_match(/\<subsequentAuth\>/, data)
       assert_not_match(/\<subsequentAuthTransactionID\>/, data)
@@ -1293,7 +1293,7 @@ class CyberSourceTest < Test::Unit::TestCase
       assert_match(/\<networkTokenCryptogram\>111111111100cryptogram/, data)
       assert_match(/\<paymentSolution\>015/, data)
       assert_match(/\<transactionType\>3/, data)
-      assert_not_match(/\<subsequentAuthFirst\>true/, data)
+      assert_match(/\<subsequentAuthFirst\>true/, data)
       assert_match(/\<subsequentAuthStoredCredential\>true/, data)
       assert_not_match(/\<subsequentAuth\>true/, data)
       assert_not_match(/\<subsequentAuthTransactionID\>016150703802094/, data)
@@ -1316,7 +1316,7 @@ class CyberSourceTest < Test::Unit::TestCase
       assert_match(/\<paymentSolution\>015/, data)
       assert_match(/\<transactionType\>3/, data)
       assert_match(/\<subsequentAuthFirst\>true/, data)
-      assert_match(/\<commerceIndicator\>internet/, data)
+      assert_match(/\<commerceIndicator\>install/, data)
       assert_not_match(/\<subsequentAuthStoredCredential\>/, data)
       assert_not_match(/\<subsequentAuth\>true/, data)
       assert_not_match(/\<subsequentAuthTransactionID\>016150703802094/, data)
@@ -1342,7 +1342,7 @@ class CyberSourceTest < Test::Unit::TestCase
       assert_not_match(/\<subsequentAuthStoredCredential\>true/, data)
       assert_match(/\<subsequentAuth\>true/, data)
       assert_match(/\<subsequentAuthTransactionID\>016150703802094/, data)
-      assert_match(/\<commerceIndicator\>internet/, data)
+      assert_match(/\<commerceIndicator\>install/, data)
     end.respond_with(successful_authorization_response)
     assert response.success?
   end
@@ -1361,11 +1361,11 @@ class CyberSourceTest < Test::Unit::TestCase
       assert_match(/\<networkTokenCryptogram\>111111111100cryptogram/, data)
       assert_match(/\<paymentSolution\>015/, data)
       assert_match(/\<transactionType\>3/, data)
-      assert_not_match(/\<subsequentAuthFirst\>/, data)
+      assert_match(/\<subsequentAuthFirst\>/, data)
       assert_match(/\<subsequentAuthStoredCredential\>true/, data)
       assert_not_match(/\<subsequentAuth\>true/, data)
       assert_not_match(/\<subsequentAuthTransactionID\>016150703802094/, data)
-      assert_match(/\<commerceIndicator\>internet/, data)
+      assert_match(/\<commerceIndicator\>install/, data)
     end.respond_with(successful_authorization_response)
     assert response.success?
   end
@@ -1384,7 +1384,7 @@ class CyberSourceTest < Test::Unit::TestCase
       assert_match(/\<paymentSolution\>015/, data)
       assert_match(/\<transactionType\>3/, data)
       assert_match(/\<subsequentAuthFirst\>true/, data)
-      assert_match(/\<commerceIndicator\>internet/, data)
+      assert_match(/\<commerceIndicator\>recurring/, data)
       assert_not_match(/\<subsequentAuthStoredCredential\>/, data)
       assert_not_match(/\<subsequentAuth\>true/, data)
       assert_not_match(/\<subsequentAuthTransactionID\>016150703802094/, data)
@@ -1410,7 +1410,7 @@ class CyberSourceTest < Test::Unit::TestCase
       assert_not_match(/\<subsequentAuthStoredCredential\>true/, data)
       assert_match(/\<subsequentAuth\>true/, data)
       assert_match(/\<subsequentAuthTransactionID\>016150703802094/, data)
-      assert_match(/\<commerceIndicator\>internet/, data)
+      assert_match(/\<commerceIndicator\>recurring/, data)
     end.respond_with(successful_authorization_response)
     assert response.success?
   end
@@ -1429,11 +1429,11 @@ class CyberSourceTest < Test::Unit::TestCase
       assert_match(/\<networkTokenCryptogram\>111111111100cryptogram/, data)
       assert_match(/\<paymentSolution\>015/, data)
       assert_match(/\<transactionType\>3/, data)
-      assert_not_match(/\<subsequentAuthFirst\>/, data)
+      assert_match(/\<subsequentAuthFirst\>/, data)
       assert_match(/\<subsequentAuthStoredCredential\>true/, data)
       assert_not_match(/\<subsequentAuth\>true/, data)
       assert_not_match(/\<subsequentAuthTransactionID\>016150703802094/, data)
-      assert_match(/\<commerceIndicator\>internet/, data)
+      assert_match(/\<commerceIndicator\>recurring/, data)
     end.respond_with(successful_authorization_response)
     assert response.success?
   end
